improve components geometry vars

--- a/app/less/components.less
+++ b/app/less/components.less
@@ -62,7 +62,7 @@
 	}
 
 	&.panel {
-		padding : 1%;
+		padding : unit(@panelPaddingY, px) unit(@panelPaddingX, px);
 		//background-color: #222;
 	}
 
@@ -71,13 +71,16 @@
 		outline          : 2px solid grey;
 		outline-offset   : -2px;
 		display          : inline-block;
-		padding          : 1%;
+		padding          : unit(@buttonPaddingY, px) unit(@buttonPaddingX, px);
+		height           : unit(@buttonHeight, px);
+		line-height      : unit(@buttonHeight, px);
+		vertical-align   : middle;
 		cursor           : pointer;
 
 		&.icon {
-			padding-left: 4.5%;
+			padding-left: unit(@buttonHeight + @buttonPaddingX, px);
 			background-repeat: no-repeat;
-			background-position: 10px center;
+			background-position: unit(@buttonPaddingX, px) center;
 		}
 
 		&:hover {
@@ -98,6 +101,7 @@
 		display: inline-block;
 		width: unit(@checkBoxWidth, px);
 		height: unit(@checkBoxHeight, px);
+		line-height: unit(@checkBoxHeight, px);
 		border: 3px solid #005b9c;
 		background-color: #333;
 
@@ -118,7 +122,7 @@
 			table-layout: fixed;
 
 			td.cell {
-				padding : 1%;
+				padding: unit(@gridItemPaddingY, px) unit(@gridItemPaddingX, px);
 				vertical-align: middle;
 				text-align: center;
 			}
@@ -127,67 +131,6 @@
 			}
 		}
 	}
-
-	/*&.list {
-		background-color: #222;
-		table-layout: fixed;
-		width: 100%;
-		//min-height: 250px;
-
-		ul {
-			list-style: none;
-			margin: 0;
-			padding: 0;
-			width: 100%;
-			//display: table;
-
-			> .item {
-				cursor: pointer;
-				vertical-align: middle;
-				//display: table-cell;
-				padding: 10px;
-
-				&.focus {
-					background-color: #8b7f0c;
-				}
-			}
-		}
-
-		//> .body {
-			//display : table-column;
-
-
-		//}
-
-		&.horizontal {
-			display: table;
-			//table-layout: fixed;
-			//width: 100%;
-			//min-height: 50px;
-
-			ul {
-				list-style: none;
-				display: table-row;
-				margin: 0;
-				padding: 0;
-				width: 100%;
-
-				> .item {
-					//float: left;
-					display        : table-cell;
-					text-align     : center;
-					vertical-align : middle;
-					padding: 10px;
-				}
-			}
-
-			//> .body {
-			//display : table-row;
-
-
-			//}
-		}
-	}*/
 
 	&.list {
 		background-color: #222;
@@ -201,7 +144,7 @@
 
 		> .item {
 			cursor: pointer;
-			padding: 0 10px;
+			padding: unit(@listItemPaddingY, px) unit(@listItemPaddingX, px);
 			vertical-align: middle;
 			height: unit(@listItemHeight, px);
 			line-height: unit(@listItemHeight, px);
