move navigation logic away from init page

--- a/app/less/pages.less
+++ b/app/less/pages.less
@@ -22,7 +22,7 @@
 	}
 }
 
-#pageBase {
+#pageMain {
 //		background-color: #222;
 //		.main {
 //			margin : unit(@screenAvailTop, px) unit(@screenAvailRight, px) unit(@screenAvailBottom, px) unit(@screenAvailLeft, px);
