remove strict padding for pages

--- a/app/less/components.less
+++ b/app/less/components.less
@@ -8,9 +8,10 @@
 
 	&.page {
 		// hidden by default
-		width      : unit(@availWidth,  px);
-		height     : unit(@availHeight, px);
-		padding    : unit(@availTop, px) unit(@availRight, px) unit(@availBottom, px) unit(@availLeft, px);
+		width      : unit(@width,  px);
+		height     : unit(@height, px);
+		//padding    : unit(@availTop, px) unit(@availRight, px) unit(@availBottom, px) unit(@availLeft, px);
+		padding    : 0;
 		position   : absolute;
 		visibility : hidden;
 
