--- a/app/less/components.less
+++ b/app/less/components.less
@@ -105,6 +105,8 @@
 		line-height: unit(@checkBoxHeight, px);
 		border: 3px solid #005b9c;
 		background-color: #333;
+		// hack to get rid of gap
+		vertical-align: bottom;
 
 		&.checked {
 			background-color: orange;
