add general visibility methods and events

--- a/app/less/components.less
+++ b/app/less/components.less
@@ -6,6 +6,12 @@
 .component {
 	// component's outer dom element
 
+	&.hidden {
+		// need to force
+		// as some components apply "display" later
+		display: none !important;
+	}
+
 	&.page {
 		// hidden by default
 		width      : unit(@width,  px);
