add more distinction to focused item

--- a/app/less/components.less
+++ b/app/less/components.less
@@ -136,6 +136,7 @@
 				text-align: center;
 			}
 			td.cell.focus {
+				color: black;
 				background-color: orange;
 			}
 		}
@@ -161,6 +162,7 @@
 
 			&.focus {
 				background-color: orange;
+				color: black;
 			}
 		}
 		//}
