--- a/app/less/develop.less
+++ b/app/less/develop.less
@@ -50,6 +50,11 @@ div.develop {
 		> .item {
 			outline : 1px dashed #000000;
 			outline-offset : -1px;
+
+			&.focus {
+				outline : 1px dashed orange;
+				outline-offset : -1px;
+			}
 		}
 	}
 
@@ -57,6 +62,11 @@ div.develop {
 		td.cell {
 			outline : 1px dashed #000000;
 			outline-offset : -1px;
+
+			&.focus {
+				outline : 1px dashed orange;
+				outline-offset : -1px;
+			}
 		}
 	}
 }
