--- a/app/less/components.less
+++ b/app/less/components.less
@@ -75,8 +75,8 @@
 
 	&.button {
 		background-color : #002042;
-		outline          : 2px solid grey;
-		outline-offset   : -2px;
+		//outline          : 2px solid grey;
+		//outline-offset   : -2px;
 		display          : inline-block;
 		padding          : unit(@buttonPaddingY, px) unit(@buttonPaddingX, px);
 		height           : unit(@buttonHeight, px);
@@ -96,7 +96,7 @@
 
 		&.focus {
 			background-color : #005b9c;
-			outline : 2px solid red;
+			//outline : 2px solid red;
 		}
 
 		&.click {
@@ -109,7 +109,7 @@
 		width: unit(@checkBoxWidth, px);
 		height: unit(@checkBoxHeight, px);
 		line-height: unit(@checkBoxHeight, px);
-		border: 3px solid #005b9c;
+		//border: 3px solid #005b9c;
 		background-color: #333;
 		// hack to get rid of gap
 		vertical-align: bottom;
