--- a/app/less/components.less
+++ b/app/less/components.less
@@ -69,7 +69,7 @@
 	}
 
 	&.panel {
-		padding : unit(@panelPaddingY, px) unit(@panelPaddingX, px);
+		//padding : unit(@panelPaddingY, px) unit(@panelPaddingX, px);
 		//background-color: #222;
 	}
 
@@ -143,7 +143,7 @@
 	}
 
 	&.list {
-		background-color: #222;
+		background-color: #333;
 		//display: table;
 		//table-layout: fixed;
 		width: 100%;
