restore panel paddings

--- a/app/less/components.less
+++ b/app/less/components.less
@@ -69,7 +69,7 @@
 	}
 
 	&.panel {
-		//padding : unit(@panelPaddingY, px) unit(@panelPaddingX, px);
+		padding : unit(@panelPaddingY, px) unit(@panelPaddingX, px);
 		//background-color: #222;
 	}
 
