fix issue with large content on one of the pages

--- a/app/less/components.less
+++ b/app/less/components.less
@@ -20,6 +20,7 @@
 		padding    : 0;
 		position   : absolute;
 		visibility : hidden;
+		overflow   : hidden;
 
 		// only one active page is visible
 		&.active {
