--- a/app/less/components.less
+++ b/app/less/components.less
@@ -71,8 +71,20 @@
 
 	&.panel {
 		padding : unit(@panelPaddingY, px) unit(@panelPaddingX, px);
-		//background-color: #222;
+		background-color: #222;
 	}
+
+//	&.infoPanel {
+//		.head {
+//			background-color: #333;
+//			padding : unit(@panelPaddingY, px) unit(@panelPaddingX, px);
+//		}
+//		.body {
+//			background-color: #222;
+//			padding : unit(@panelPaddingY, px) unit(@panelPaddingX, px);
+//		}
+//	}
+
 
 	&.button {
 		background-color : #002042;
