--- a/app/less/components.less
+++ b/app/less/components.less
@@ -144,6 +144,7 @@
 			table-layout: fixed;
 
 			td.cell {
+				cursor: pointer;
 				padding: unit(@gridItemPaddingY, px) unit(@gridItemPaddingX, px);
 				vertical-align: middle;
 				text-align: center;
