rename cell to item (to support consistency with List)

--- a/app/less/components.less
+++ b/app/less/components.less
@@ -143,13 +143,13 @@
 			width: 100%;
 			table-layout: fixed;
 
-			td.cell {
+			td.item {
 				cursor: pointer;
 				padding: unit(@gridItemPaddingY, px) unit(@gridItemPaddingX, px);
 				vertical-align: middle;
 				text-align: center;
 			}
-			td.cell.focus {
+			td.item.focus {
 				color: black;
 				background-color: orange;
 			}
