add draft support of disabled cells

--- a/app/less/components.less
+++ b/app/less/components.less
@@ -153,6 +153,10 @@
 				color: black;
 				background-color: orange;
 			}
+			td.item.disable {
+				color: grey;
+				background-color: #111;
+			}
 		}
 	}
 
