set checkBox cursor to pointer

--- a/app/less/components.less
+++ b/app/less/components.less
@@ -118,6 +118,7 @@
 	}
 
 	&.checkBox {
+		cursor: pointer;
 		display: inline-block;
 		width: unit(@checkBoxWidth, px);
 		height: unit(@checkBoxHeight, px);
