move page styles to separate files

--- a/tpl/app/less/main.less
+++ b/tpl/app/less/main.less
@@ -1,17 +1,8 @@
-// Main entry point.
+// Main entry point (release move).
 // Contains all the user styles and base component redefinitions.
 //
 // @author Stanislav Kalashnik <sk@infomir.eu>
 // @license GNU GENERAL PUBLIC LICENSE Version 3
 
 
-#pageInit {
-	.main {
-		display        : table-cell;
-		vertical-align : middle;
-		text-align     : center;
-		width          : unit(@width,  px);
-		height         : unit(@height, px);
-		font-size      : 150%;
-	}
-}
+@import "pages/init";
