fix app less files nested import

--- a/app/less/main.less
+++ b/app/less/main.less
@@ -1,7 +1,10 @@
-// common for all graphical resolution block
+// Main entry point (release move).
+// Includes all the pages and declares global common styles.
+// Common for all graphical resolution block.
 //
 // @author Stanislav Kalashnik <sk@infomir.eu>
 // @license GNU GENERAL PUBLIC LICENSE Version 3
+
 
 @pathIcons: '../img/@{height}/icons/';
 
@@ -37,3 +40,5 @@ a { text-decoration : none }
 @import "components";
 
 @import "icons";
+
+@import "@{pathApp}/main";
