--- a/app/less/develop.less
+++ b/app/less/develop.less
@@ -1,7 +1,9 @@
-// common develop rules
+// Main entry point (develop move).
+// Contains additional styles not included in the release.
 //
 // @author Stanislav Kalashnik <sk@infomir.eu>
 // @license GNU GENERAL PUBLIC LICENSE Version 3
+
 
 // release rules
 @import "main";
@@ -70,3 +72,6 @@ div.develop {
 		}
 	}
 }
+
+
+@import "@{pathApp}/develop";
