--- a/app/less/components.less
+++ b/app/less/components.less
@@ -152,14 +152,14 @@
 			}
 			td.item.mark {
 				color: black;
-				background-color: white;
+				background-color: green;
 			}
 			td.item.focus {
 				color: black;
 				background-color: orange;
 			}
 			td.item.focus.mark {
-				color: black;
+				color: white;
 				background-color: #AE7200;
 			}
 			td.item.disable {
@@ -188,7 +188,7 @@
 			//display: table-row;
 
 			&.mark {
-				background-color: white;
+				background-color: green;
 				color: black;
 			}
 
@@ -199,7 +199,7 @@
 
 			&.focus.mark {
 				background-color: #AE7200;
-				color: black;
+				color: white;
 			}
 		}
 		//}
