add base input realization

--- a/app/less/components.less
+++ b/app/less/components.less
@@ -250,4 +250,30 @@
 			width: 8px;
 		}
 	}
+
+
+	&.input {
+		width: 200px;
+		height: 40px;
+		border: 1px solid rgb(204, 204, 204);
+		cursor: text;
+		overflow: hidden;
+		font-size: 37px;
+		color: #888;
+		.caret {
+			margin-top: 2px;
+			height: 36px;
+			width: 1px;
+			border: none;
+			background: #ccc;
+			display: block;
+			float:left;
+		}
+		.char {
+			color: #000;
+			margin-top: 0;
+			display: block;
+			float:left;
+		}
+	}
 }
