refactor input, now inner 'value' property works without problems

--- a/app/less/ui/input.less
+++ b/app/less/ui/input.less
@@ -11,12 +11,14 @@
 	overflow:  hidden;
 	font-size: 37px;
 	color:     #888;
+	text-align: left;
+	background-color: #fff;
 	.caret {
 		margin-top: 2px;
 		height:     36px;
 		width:      1px;
 		border:     none;
-		background: #ccc;
+		background: #000;
 		display:    block;
 		float:      left;
 	}
