correct less base paths

--- a/app/less/main.less
+++ b/app/less/main.less
@@ -6,7 +6,7 @@
 // @license GNU GENERAL PUBLIC LICENSE Version 3
 
 
-@pathIcons: '../img/@{height}/icons/';
+@pathImg: '@{pathApp}/img/@{height}';
 
 html, body {
 	width               : unit(@width,  px);
@@ -41,4 +41,4 @@ a { text-decoration : none }
 
 @import "icons";
 
-@import "@{pathApp}/main";
+@import "@{pathApp}/less/main";
