--- a/app/less/ui/list.less
+++ b/app/less/ui/list.less
@@ -15,7 +15,7 @@
 
 	> .item {
 		cursor:         pointer;
-		padding:        unit(@listItemPaddingY, px) unit(@listItemPaddingX, px);
+		padding:        0 unit(@listItemPaddingX, px);
 		vertical-align: middle;
 		height:         unit(@listItemHeight, px);
 		line-height:    unit(@listItemHeight, px);
