correct page component styles

--- a/app/less/ui/page.less
+++ b/app/less/ui/page.less
@@ -4,12 +4,11 @@
 // @license GNU GENERAL PUBLIC LICENSE Version 3
 
 .component.page {
-	// hidden by default
 	width:      unit(@width, px);
 	height:     unit(@height, px);
-	//padding    : unit(@availTop, px) unit(@availRight, px) unit(@availBottom, px) unit(@availLeft, px);
-	padding:    0;
 	position:   absolute;
+	left:       0;
+	top:        0;
 	visibility: hidden;
 	overflow:   hidden;
 
