rework ModalBox component

--- a/app/less/components.less
+++ b/app/less/components.less
@@ -23,7 +23,7 @@
 @import "./ui/grid.less";
 @import "./ui/input.less";
 @import "./ui/list.less";
-@import "./ui/modal.less";
+@import "./ui/modal.box.less";
 @import "./ui/page.less";
 @import "./ui/panel.less";
 @import "./ui/progress.bar.less";
