rework ModalMessage generated html and styles

--- a/app/less/components.less
+++ b/app/less/components.less
@@ -24,6 +24,7 @@
 @import "./ui/input.less";
 @import "./ui/list.less";
 @import "./ui/modal.box.less";
+@import "./ui/modal.message.less";
 @import "./ui/page.less";
 @import "./ui/panel.less";
 @import "./ui/progress.bar.less";
