correct ProgressBar styles

--- a/app/less/ui/progress.bar.less
+++ b/app/less/ui/progress.bar.less
@@ -8,7 +8,7 @@
 	background-color: grey;
 
 	> .value {
-		height:           unit(@progressBarHeight, px);
+		height:           100%;
 		background-color: orange;
 	}
 }
