--- a/app/less/ui/scroll.bar.less
+++ b/app/less/ui/scroll.bar.less
@@ -5,20 +5,32 @@
 
 .component.scrollBar {
 	background-color: grey;
-	position:         relative;
+	display:          inline-block;
+	height:           100%;
+	width:            unit(@scrollBarWidth, px);
+	vertical-align:   bottom;
 
-	&.horizontal {
-		height: 8px;
-		width:  100%;
-	}
-	&.vertical {
-		height: 100%;
-		width:  8px;
-	}
+	> .thumb {
+		display:          block;
+		width:            unit(@scrollBarWidth, px);
+		min-height:       unit(@scrollBarWidth, px);
+		background-color: white;
 
-	> .value {
-		background-color: orange;
-		height:           8px;
-		width:            8px;
+		&.hidden {
+			display: none;
+		}
+	}
+}
+
+.component.scrollBar.horizontal {
+	display: block;
+	height:  unit(@scrollBarHeight, px);
+	width:   100%;
+
+	> .thumb {
+		display:        inline-block;
+		vertical-align: top;
+		height:         unit(@scrollBarHeight, px);
+		min-width:      unit(@scrollBarHeight, px);
 	}
 }
