add images relative path

--- a/app/less/main.less
+++ b/app/less/main.less
@@ -5,7 +5,10 @@
 // @author Stanislav Kalashnik <sk@infomir.eu>
 // @license GNU GENERAL PUBLIC LICENSE Version 3
 
-@pathImg: '@{pathApp}/img/@{height}';
+// relative path
+@pathImg: '../img/@{height}';
+// absolute path
+@pathImgFull: '@{pathApp}/img/@{height}';
 
 
 html, body {
