--- a/tpl/app/less/stb/develop.less
+++ b/tpl/app/less/stb/develop.less
@@ -4,9 +4,6 @@
 // @author Stanislav Kalashnik <sk@infomir.eu>
 // @license GNU GENERAL PUBLIC LICENSE Version 3
 
-// release rules
-@import "main";
-
 html {
 	background-color: transparent;
 	overflow:         auto;
@@ -77,4 +74,4 @@ div.develop {
 	}
 }
 
-@import "@{pathApp}/less/develop";
+//@import "@{pathApp}/less/develop";
