--- a/tpl/app/less/main.less
+++ b/tpl/app/less/main.less
@@ -1,9 +1,17 @@
-// Main entry point (release move).
-// Contains all the user styles and base component redefinitions.
+// Common styles identical for all resolutions.
 //
 // @author Stanislav Kalashnik <sk@infomir.eu>
 // @license GNU GENERAL PUBLIC LICENSE Version 3
 
 
+// framework core
+@import "stb/main";
+
+
+// pages
 @import "pages/init";
 @import "pages/main";
+
+
+// develop/release specific styles
+@import "@{mode}";
