--- a/tpl/app/less/pages/init.less
+++ b/tpl/app/less/pages/init.less
@@ -5,12 +5,20 @@
 
 
 #pageInit {
+	text-align : center;
+
 	.main {
-		display        : table-cell;
-		vertical-align : middle;
-		text-align     : center;
-		width          : unit(@width,  px);
-		height         : unit(@height, px);
-		font-size      : 150%;
+		margin-top  : unit(@fontSize * 2, px);
+		line-height : unit(@height - (@availTop + @availBottom) - @fontSize * 4, px);
+		font-size   : 150%;
+	}
+	.version {
+		padding-right : unit(@fontSize, px);
+		line-height   : unit(@fontSize * 2, px);
+		text-align    : right;
+		font-size     : 80%;
+		.value {
+			color : grey;
+		}
 	}
 }
