--- a/tpl/app/less/pages/init.less
+++ b/tpl/app/less/pages/init.less
@@ -5,20 +5,25 @@
 
 
 #pageInit {
-	text-align : center;
+	display: table;
 
-	.main {
-		margin-top  : unit(@fontSize * 2, px);
-		line-height : unit(@height - (@availTop + @availBottom) - @fontSize * 4, px);
-		font-size   : 150%;
-	}
-	.version {
-		padding-right : unit(@fontSize, px);
-		line-height   : unit(@fontSize * 2, px);
-		text-align    : right;
-		font-size     : 80%;
-		.value {
-			color : grey;
+	> .cell {
+		display: table-cell;
+		position: relative;
+		text-align: center;
+		vertical-align: middle;
+		font-size: 150%;
+
+		> .version {
+			position: absolute;
+			bottom: unit(@availBottom, px);
+			right: unit(@availRight, px);
+			font-size: 50%;
+			color: #555;
+
+			> .value {
+				color: #fff;
+			}
 		}
 	}
 }
