add less file for current project components

--- a/tpl/app/less/main.less
+++ b/tpl/app/less/main.less
@@ -8,6 +8,8 @@
 @import "pages/init";
 @import "pages/main";
 
+// current project components
+@import "components";
 
 // develop/release specific styles
 @import "@{mode}";
