add place to put custom outline styles

--- a/tpl/app/less/develop.less
+++ b/tpl/app/less/develop.less
@@ -6,3 +6,9 @@
 
 // framework develop styles
 @import "stb/develop";
+
+
+// can be toggled by numpad 9
+body.develop {
+	// put you custom outline here
+}
