--- a/tpl/app/less/stb/ui/tab.item.less
+++ b/tpl/app/less/stb/ui/tab.item.less
@@ -7,8 +7,8 @@
 .component.tabItem {
 	position: absolute;
 	visibility: hidden;
-	width: 100%;
-	height: 100%;
+	width: inherit;
+	height: inherit;
 
 	&.active {
 		visibility: visible;
