rework tab list/item components

--- a/tpl/app/less/stb/ui/tab.item.less
+++ b/tpl/app/less/stb/ui/tab.item.less
@@ -5,12 +5,12 @@
 
 
 .component.tabItem {
-	position: absolute;
-	visibility: hidden;
-	width: inherit;
-	height: inherit;
+	position:   absolute;
+	visibility: inherit;
+	width:      inherit;
+	height:     inherit;
 
-	&.active {
-		visibility: inherit;
+	&.hidden {
+		visibility: hidden;
 	}
 }
