--- a/tpl/app/less/stb/develop.less
+++ b/tpl/app/less/stb/develop.less
@@ -1,4 +1,4 @@
-// Main entry point (develop move).
+// Main entry point (develop mode).
 // Contains additional styles not included in the release.
 //
 // @author Stanislav Kalashnik <sk@infomir.eu>
