--- a/tpl/app/less/stb/main.less
+++ b/tpl/app/less/stb/main.less
@@ -1,4 +1,4 @@
-// Main entry point (release move).
+// Main entry point (release mode).
 // Includes all the pages and declares global common styles.
 // Common for all graphical resolution block.
 //
