rename grey theme to graphite theme

--- a/tpl/app/less/stb/ui/graphite/main.less
+++ b/tpl/app/less/stb/ui/graphite/main.less
@@ -1,10 +1,4 @@
-@import "480.less";
-@import "576.less";
-@import "720.less";
-@import "1280.less";
-
 @import "panel.less";
-
 
 .component.button {
     background: #377cff;
@@ -14,7 +8,7 @@
 }
 
 .component.list {
- background: transparent;
+    background: transparent;
     >.item {
         background: transparent;
         padding: 0;
@@ -37,3 +31,11 @@
         box-sizing: border-box;
     }
 }
+
+.component.scrollBar {
+    background: transparent;
+    >.thumb {
+        background: #A1A1A1;
+    }
+}
+
