--- a/tpl/app/less/stb/ui/graphite/panel.less
+++ b/tpl/app/less/stb/ui/graphite/panel.less
@@ -1,4 +1,4 @@
-.component.panel.grey {
+.component.panel.graphite {
     width:unit(@panelWidth, px);
     height: unit(@panelHeight, px);
     background: #3A3A3A;
