--- a/tpl/app/less/stb/ui/graphite/vars/720.less
+++ b/tpl/app/less/stb/ui/graphite/vars/720.less
@@ -1,3 +1,8 @@
+// redefine common vars
+@scrollBarWidth         : 2;
+
+
+// grey theme vars
 @safePadding            :20;
 @pagePadding            :50;
 // grey panel
@@ -13,3 +18,5 @@
 @mainPanelTop           :70;
 @mainPanelLeft          :400;
 @panelShadowWidth       :20;
+
+
