fix components. add scroll area and value list component

--- a/tpl/app/less/stb/components.less
+++ b/tpl/app/less/stb/components.less
@@ -39,3 +39,5 @@
 @import "./ui/layout.less";
 @import "./ui/check.list.less";
 @import "./ui/radio.list.less";
+@import "./ui/scroll.area.less";
+@import "./ui/value.list.less";
